--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -568,3 +568,53 @@ input[type="checkbox"].input-validation-error {
         .spectate_start_list_container::-webkit-scrollbar-thumb:hover {
             background: #555;
         }
+
+#card-error {
+    color: rgb(105, 115, 134);
+    text-align: left;
+    font-size: 13px;
+    line-height: 17px;
+    margin-top: 12px;
+}
+
+#card-element {
+    border-radius: 4px 4px 0 0;
+    padding: 12px;
+    border: 1px solid rgba(50, 50, 93, 0.1);
+    height: 44px;
+    width: 100%;
+    background: white;
+}
+
+.payment-container {
+    width: 30vw;
+    min-width: 500px;
+    align-self: center;
+    box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1), 0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+    border-radius: 7px;
+    padding: 5px 40px 5px 40px;
+}
+.payment-button {
+    background: #5469d4;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+    border-radius: 0 0 4px 4px;
+    border: 0;
+    padding: 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    display: block;
+    transition: all 0.2s ease;
+    box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+    width: 100%;
+}
+
+    .payment-button:hover {
+        filter: contrast(115%);
+    }
+
+    .payment-button:disabled {
+        opacity: 0.5;
+        cursor: default;
+    }
