--- a/STSEval/management/templates/management/session_form.html
+++ b/STSEval/management/templates/management/session_form.html
@@ -2,10 +2,15 @@
     {% csrf_token %}
     <div id="divManageSession" align="center">
         <div class="row">
-            <div class="col-6">
+            <div class="col-4">
                 SESSION NAME<br/>
                 {{ form.name }}<br/>
                 {{form.name.errors}}
+            </div>
+            <div class="col-2">
+                LEVEL<br/>
+                {{ form.level }}<br/>
+                {{form.level.errors}}
             </div>
             <div class="col-3">
                 SESSION TIME <span style="font-size:.6rem">(EST)</span><br/>
