payment intent tracking and purchasing setup

--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -618,3 +618,7 @@ input[type="checkbox"].input-validation-error {
         opacity: 0.5;
         cursor: default;
     }
+
+.muted-text{
+    color:#8e8e8e;
+}
