--- a/STSEval/management/templates/management/setup_finish.html
+++ b/STSEval/management/templates/management/setup_finish.html
@@ -21,46 +21,49 @@
 
     {% endif %}
      <br/>
-    {% if not email_sent %}
-        Send competition information to judges, coaches, and camera operators.
+    {% if not session_paid %}
+        <div>
+            You have {{num_panels}} judging panels, this session will cost ${{session_cost}}.<br/>
+            Once paid you will not be able to edit judge emails, make sure they are correct.<br/>
+            <div class="payment-container">
+                <div id="card-element">
+                    <!-- Elements will create input elements here -->
+                </div>
+                <button id="btnPayNow" class="payment-button" onclick="PayClick()">${{session_cost}} Pay Now</button>
+            </div>
+            <!-- We'll put the error messages in this element -->
+            <div id="card-errors" role="alert" class="errorlist"></div>
+
+            {% if request.user.is_staff %}
+                <br/>
+                <button id="btnBypass" type="button" class="btn btn-main mt-2" onclick="BypassPayment()">Staff Bypass Payment</button>
+            {% endif %}
+        </div>
     {% else %}
-        You have already sent the email notice.  If you have made changes to judges, coaches or camera operator account you can send the notices again.
-    {% endif %}
+         {% if not email_sent %}
+            Send competition information to judges, coaches, and camera operators.
+        {% else %}
+            You have already sent the email notice.  If you have made changes to judges, coaches or camera operator account you can send the notices again.
+        {% endif %}
         <br/>
         <button id="btnSendEmails" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="Send()">Send</button>
         <br/><br/>
-    {% if not session_active %}
-        {% if missed_athlete or missed_camera %}
-        <div id="divActivate">
-            Setup incomplete, finish setup to allow activation.<br/>
-            <button id="btnActivate" type="button" class="btn-main btn-wide pt-4 pb-4 ui-disabled" style="border-radius: 1rem;" onclick="Activate()">Activate</button>
-        </div>
-        {% else %}
-            {% if session_paid %}
-                <div id="divActivate">
-                    Activate the competition when ready.<br/>
-                    <button id="btnActivate" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="Activate()">Activate</button>
-                </div>
+        {% if not session_active %}
+            {% if missed_athlete or missed_camera %}
+            <div id="divActivate">
+                Setup incomplete, finish setup to allow activation.<br/>
+                <button id="btnActivate" type="button" class="btn-main btn-wide pt-4 pb-4 ui-disabled" style="border-radius: 1rem;" onclick="Activate()">Activate</button>
+            </div>
             {% else %}
-                <div>
-                    You have {{num_panels}} judging panels, this session will cost ${{session_cost}}.<br/>
-                    <div class="payment-container">
-                        <div id="card-element">
-                          <!-- Elements will create input elements here -->
-                        </div>
-                        <button id="btnPayNow" class="payment-button" onclick="PayClick()">Pay Now</button>
+                    <div id="divActivate">
+                        Activate the competition when ready.<br/>
+                        <button id="btnActivate" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;" onclick="Activate()">Activate</button>
                     </div>
-                    <!-- We'll put the error messages in this element -->
-                    <div id="card-errors" role="alert" class="errorlist"></div>
-
-                    {% if request.user.is_staff %}
-                          <br/>
-                         <button id="btnBypass" type="button" class="btn btn-main mt-2" onclick="BypassPayment()">Staff Bypass Payment</button>
-                    {% endif %}
-                </div>
+            
             {% endif %}
         {% endif %}
     {% endif %}
+   
      <button id="btnSessionOverview" type="button" class="btn-main btn-wide pt-4 pb-4" style="border-radius: 1rem;{% if not session_active %}display:none{% endif %}" onclick="btnSessionOverviewClick()">Session<br/>Overview</button>
     <br/>
     <br/>
