--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -4,10 +4,34 @@
 <div align="center" style="margin:10px;padding:0">
     {{session.full_name}}<br/>
     <br/>
-    <h2>Session Access Codes</h2>
-    These are unique codes that spectators can redeem, giving them full access to a session.  Purchase codes for this session at cost ($3.00 per code). Spectators can enter this code to bypass paying for the session.
-
-		
+    <div class="row">
+        <div class="col-3" align="right">
+             <h2>Session Access Code</h2>
+        </div>
+        <div class="col-8 pt-2 pl-2" align="left">
+            <span class="muted-text">This is a unique code that spectators can redeem, giving them full access to a session.<br/>Purchase uses for this session at cost ($3.00 per user).  Spectators can enter this code to bypass paying for the session.</span><br/>
+            <br/>
+            <div class="row no-gutters">
+                <div class="pr-4" align="center">
+                    Access Code<br/>
+                    <input type="text" name="access_code" placeholder="Access Code" maxlength="20" id="access_code" value="{{session.access_code}}"><br/>
+                    <button href="#" id="btnSave" type="button" class="btn btn-main management-button mt-2" onclick="Save()">Update</button>
+                </div>
+                <div class="pl-4 pr-4" align="center">
+                    Redeemed<br/>
+                    {{session.access_code_used}}
+                </div>
+                <div class="pl-4 pr-4" align="center">
+                    Quantity<br/>
+                    {{session.access_code_total}}
+                </div>
+                <div class="pl-4">
+                    <button href="#" id="btnSave" type="button" class="btn btn-main management-button-long mt-2" onclick="PurchaseMoreClick()">Purchase More</button>
+                </div>
+            </div>
+        </div>
+    </div>
+   
 </div>
 
 {% endblock %}
@@ -22,28 +46,23 @@
     var Changed = false;
     var gonext = false;
 
+    function Save() {
+        if ($("#access_code").val() != '' && $("#access_code").val() != ' ') {
+            $.ajax({
+                url: "/management/set_access_code/" + SessionID,
+                type: "POST",
+                headers: { "X-CSRFToken": token },
+                data: {
+                    'access_code': $("#access_code").val(),
+                },
+                success: function (data) {
 
-    function Send() {
-        $("#btnSendEmails").addClass("ui-disabled");
-        $.ajax({
-            url: "/management/send_session_emails/" + SessionID,
-            success: function () {
-                
-            }
-        });
-        alert("Email Notifications Sending");
-
+                }
+            });
+        }
     }
 
-    function BypassPayment() {
-        $.ajax({
-            url: "/management/staff_bypass_payment/" + SessionID,
-            success: function () {
-                window.location.reload();
-            }
-        });
-
-    }
+   
 
      function Activate() {
         $("#btnActivate").addClass("ui-disabled");
@@ -61,24 +80,6 @@
        
 
     }
-
-    function btnSessionOverviewClick() {
-            window.location = "/overview/" + SessionID;
-    }
-
-    function GoBack() {
-
-        window.location = "/management/setup_sponsors/" + SessionID;
-
-    }
-
-    function FirstClick() {
-        window.location = "/management/setup_competition/";
-    }
-
-
-
-
    
 </script>
 {% endblock %}
