--- a/STSEval/account/templates/account/stripe_payment_screen.html
+++ b/STSEval/account/templates/account/stripe_payment_screen.html
@@ -2,13 +2,15 @@
    {{message}}
 
     <div class="payment-container">
-         {% if methods|length > 0 %}
-             <select id="paymentMethod" class="selectpicker" data-style="btn-main">
+
+        Payment Method: 
+             <select id="paymentMethod" class="selectpicker" onchange="PaymentMethodChange()" >
                  {% for method in methods %}
-                    <option value="{{method.id}}"><b>{{method.card.brand}}</b> <span class="muted-text">ending in</span> {{method.card.last4}}</option>
+                    <option value="{{method.id}}" data-icon="fa fa-cc-{{method.card.brand}}"> ending in {{method.card.last4}}</option>
                  {% endfor %}
+                 <option value="new">New Card</option>
             </select>
-        {% endif %}
+        <br/><br/>
         <div id="card-element">
             <!-- Elements will create input elements here -->
         </div>
@@ -22,6 +24,7 @@
 var stripe = Stripe('{{stripe_pk}}');
     var intent_secret = '{{intent_secret}}';
     var success_message = '{{success_message}}';
+    var user_email = '{{request.user.email}}';
 </script>
 <script type="text/javascript">
     var elements = stripe.elements();
@@ -36,14 +39,30 @@ var stripe = Stripe('{{stripe_pk}}');
             displayError.textContent = '';
         }
     });
+    PaymentMethodChange();
+    function PaymentMethodChange() {
+        if ($("#paymentMethod").val() == "new") {
+            $("#card-element").show();
+        }
+        else
+            $("#card-element").hide();
+    }
+
     function PayClick() {
+        var data;
         //var cardholderName = document.querySelector("#name").value;
-        var data = {
-            card: card,
-            billing_details: {}
-        };
+        if ($("#paymentMethod").val() == "new") {
+            data = {
+                card: card,
+                billing_details: {}
+            };
+        }
+        else {
+            data = $("#paymentMethod").val();
+        }
         $("#btnPayNow").addClass('ui-disabled');
         stripe.confirmCardPayment(intent_secret, {
+            receipt_email: user_email,
             payment_method: data,
             setup_future_usage: 'on_session'
         }).then(function (result) {
