--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -598,7 +598,7 @@ input[type="checkbox"].input-validation-error {
     background: #5469d4;
     color: #ffffff;
     font-family: Arial, sans-serif;
-    border-radius: 0 0 4px 4px;
+    /*border-radius: 0 0 4px 4px;*/
     border: 0;
     padding: 12px 16px;
     font-size: 16px;
