--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="pl-4" align="center">
                     Add More<br/>
-                     <input type="text" id="txtNumAdditional" placeholder="Qty" onkeypress="return isNumberKey(event)" style="width:40px"><br/>
+                     <input type="text" id="txtNumAdditional" placeholder="Qty" onkeypress="return isNumberKey(event)" style="width:40px" value="1"><br/>
                     <button href="#" id="btnPurchase" type="button" class="btn btn-main management-button mt-2" onclick="PurchaseMoreClick()">Purchase</button>
                 </div>
             </div>
