--- a/STSEval/streaming/templates/streaming/camera.html
+++ b/STSEval/streaming/templates/streaming/camera.html
@@ -41,7 +41,7 @@
 <div align="center">
  
     <div class="container-fluid mt-3" id="publish-content">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center no-gutters">
         <div class="col-md-8 col-sm-10">
             <div id="publish-video-container">
             <video id="publisher-video" autoplay playsinline muted controls></video>
