--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -4,8 +4,8 @@
 <div align="center" style="margin:10px;padding:0">
     {{session.full_name}}<br/>
     <br/>
-    <div class="row">
-        <div class="col-3" align="right">
+    <div class="row no-gutters">
+        <div class="col-3 pr-4" align="right">
              <h2>Session Access Code</h2>
         </div>
         <div class="col-8 pt-2 pl-2" align="left">
