--- a/STSEval/management/templates/management/spectator_management.html
+++ b/STSEval/management/templates/management/spectator_management.html
@@ -77,7 +77,7 @@
                     'access_code': $("#access_code").val(),
                 },
                 success: function (data) {
-
+                    alert("Access code updated");
                 }
             });
         }
